Credit Risk Assessment

--- a/Credit Risk Assessment/Credit Risk Assessment Project.ipynb
+++ b/Credit Risk Assessment/Credit Risk Assessment Project.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "bfa075f9",
    "metadata": {},
    "outputs": [
@@ -72,6 +72,8 @@
     "from sklearn.impute import SimpleImputer\n",
     "import numpy as np\n",
     "from pathlib import Path\n",
+    "# Set the style for seaborn\n",
+    "sns.set(style=\"whitegrid\")\n",
     "\n",
     "current_dir = Path.cwd()\n",
     "data_file = current_dir.parent / 'data' / '2_Accepted_subset_100000_v2.csv'\n",
